# arkive

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: index.md
docs/concepts/: encryption.md  git-complement.md  mental-model.md  restore.md  snapshots.md  vault.md
docs/getting-started/: first-project.md  mental-model.md  quickstart.md
docs/internals/: architecture.md
docs/reference/: commands.md  config.md  platforms.md  roadmap.md  security.md  snapshots.md  vault.md
docs/workflows/: daily.md  debugging.md  private-state.md  recovery.md
src/arkive/: __init__.py  __main__.py  constants.py  errors.py
src/arkive/adapters/: __init__.py  filesystem.py  git.py  input.py
src/arkive/cli/: __init__.py  app.py  callbacks.py  decorators.py  runtime.py  serializers.py
src/arkive/cli/commands/init/: __init__.py  command.py
src/arkive/cli/commands/snapshot/: __init__.py  app.py  create.py  inspect.py  list.py  restore.py
src/arkive/cli/commands/status/: __init__.py  command.py
src/arkive/cli/helpers/: __init__.py  arguments.py  io.py
src/arkive/cli/presenters/: __init__.py  common.py  snapshot_presenter.py  status_presenter.py
src/arkive/cli/prompts/: __init__.py  confirmation_prompts.py  passphrase_prompts.py
src/arkive/config/: __init__.py  defaults.py  loader.py  writer.py
src/arkive/crypto/: __init__.py  envelope.py  kdf.py  passphrase.py
src/arkive/domain/: __init__.py  app_config.py  project.py  restore.py  snapshot.py  status.py  vault.py
src/arkive/packaging/: __init__.py  archive_builder.py  manifest_builder.py
src/arkive/repository/: __init__.py  index_repository.py  project_repository.py  snapshot_repository.py  vault_repository.py
src/arkive/services/: __init__.py  context_service.py  init_service.py  snapshot_create_service.py  snapshot_inspect_service.py  snapshot_list_service.py  snapshot_restore_service.py  status_service.py
src/arkive/utils/: __init__.py  atomic.py  filesystem.py  hashing.py  jsonio.py  masking.py  project_ids.py  project_paths.py  tilde.py  time.py
tests/: conftest.py
tests/integration/cli/: test_init_status.py  test_snapshot_create.py  test_snapshot_inspect.py  test_snapshot_list.py  test_snapshot_restore.py
tests/support/: cli.py
